--- a/bookmyshowapp-k8s/bookmyshowapp-deployment.yaml
+++ b/bookmyshowapp-k8s/bookmyshowapp-deployment.yaml
@@ -1,1 +1,38 @@
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: bookmyshowapp-deployment
+  namespace: bookmyshow-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: bookmyshowapp
+  template:
+    metadata:
+      labels:
+        app: bookmyshowapp
+    spec:
+      imagePullSecrets:
+        - name: nexus-secret
+      containers:
+      - name: bookmyshowapp
+        image: 127.0.0.1:30085/my-repository/bookmyshowapp:v1
+        ports:
+        - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: bookmyshowapp-service
+  namespace: bookmyshow-ns
+spec:
+  selector:
+    app: bookmyshowapp
+  ports:
+    - protocol: TCP
+      port: 3000  # Service port
+      targetPort: 3000  # Container port
+  type: ClusterIP
+
